--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-sm-3">
                 <div class="footer-widget">
-                <a href="{{site.baseurl}}/contact">
+                <a href="{{site.baseurl}}/contact.html">
                 <img src="{{ site.baseurl }}/assets/images/logo-footer.png" alt="logo-footer">
                 </a>
                 </div>
