--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     <div class="container">
 
         <!-- Begin Logo -->
-        <a class="navbar-brand" href="{{ site.baseurl }}/">
+        <a class="navbar-brand" href="{{ site.baseurl }}/index.html">
         <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
         </a>
         <!-- End Logo -->
